@@ -15,6 +15,7 @@ TODO
   label.
 - Added support to configure simple text element within the form.
 - Removed "star" indicator at labels for requierd fields.
+- Support (+,-,*,/) and logical grouping of elements
 
 0.7.2
 =====
